--- a/views/partial/head.erb
+++ b/views/partial/head.erb
@@ -19,11 +19,10 @@
     <meta property="og:type"        content="blog" />
     <meta property="og:description" content="<% if @quotes.one? %><%= @quotes.first.quote[0..300] %><% else %>Quotone allows you to share with the world your favorite quotes from novels, movies, anime, manga, comics, videogames and so on in a completely anonimous way without any type of registration.<% end %>" />
     
-    <% if @quotes.one? %>
-      <meta property="og:image" content="<%= get_thumbnail("#{@quotes.first.source} #{@quotes.first.tags}", 0) %>" />
-      <meta property="og:image" content="<%= get_thumbnail("#{@quotes.first.source} #{@quotes.first.tags}", 1) %>" />
-      <meta property="og:image" content="<%= get_thumbnail("#{@quotes.first.source} #{@quotes.first.tags}", 2) %>" />
-      <meta property="og:image" content="<%= get_thumbnail("#{@quotes.first.source} #{@quotes.first.tags}", 3) %>" />
+    <% if @quotes.one? && @thumbnails %>
+      <% @thumbnails.each { |t| %>
+        <meta property="og:image" content="<%= t['unescapedUrl'] %>" />
+      <% } %>
     <% else %>
       <meta property="og:image" content="<%= @domain %>/images/logo.png" />
     <% end %>
