--- a/views/new.erb
+++ b/views/new.erb
@@ -8,9 +8,10 @@
         <form action="<%= @current_url %>" method="post" class="form">
           <input type=text class="input-block-level"   name="source" placeholder="Source" value="<%= @quote.source if @quote %>" />
           <input type=text class="input-block-level"   name="tags"   placeholder="Tags"   value="<%= @quote.tags   if @quote %>" title="Divide each tag by a comma (,)" />
-          <textarea        class="input-block-level"   name="quote"  placeholder="Quote"  data-widearea="enable" rows="10"><%= @quote.quote if @quote %></textarea>
+          <textarea        class="input-block-level"   name="quote"  placeholder="Quote"  data-widearea="enable"   rows="10"><%= @quote.quote if @quote %></textarea>
           <%= csrf_tag %>
-          <input type=submit class="btn btn-medium" value="Send" />
+          <input type=submit   class="btn btn-medium" value="Send" />
+          <input type=checkbox name="spoiler" <%= 'checked' if @quote && @quote.spoiler? %> /> Spoiler
         </form>
       <% end %>
         
